--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -63,6 +63,9 @@ h1{
     padding:0;
     margin:0;
 } 
+.input-box:focus-within{
+    border-bottom: 1px solid #e350b7;
+}
 
 .container .content .intro{
     text-align: center;
